--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,18 +1,23 @@
-site_name: Docs - Infinite Developer
+site_name: Infinite Developer Docs
 site_url: https://docs.cubixdev.org
 site_description: Cubix Infinite Developer Documentation
 site_author: Cubix Entertainment
 
-repo_url: https://github.com/mkdocs/mkdocs-bootswatch
-
-copyright: Copyright &copy; Cubix Entertainment LLC 2025 | All rights reserved. <br>Copyright &copy; 2014 <a href="https://twitter.com/_tomchristie">Tom Christie</a>, <a href="http://www.dougalmatthews.com/">Dougal Matthews</a>.
+copyright: Copyright &copy; 2025 Cubix Entertainment LLC | All rights reserved. <br>Copyright &copy; 2014 <a href="https://twitter.com/_tomchristie">Tom Christie</a>, <a href="http://www.dougalmatthews.com/">Dougal Matthews</a>.
 
 theme:
-    name: slate
+    custom_dir: mkdocs_bootswatch/infinite
+    name: mkdocs
+    highlightjs: true
+    hljs_style: atom-one-dark
 
 markdown_extensions:
+    - footnotes
+    - pymdownx.superfences
+    - pymdownx.tasklist
+    - pymdownx.mark
     - toc:
-        permalink: '#'
+        permalink: "*"
 
 plugins:
     - search
