--- a/.github/workflows/deploy-release.yml
+++ b/.github/workflows/deploy-release.yml
@@ -17,7 +17,7 @@ jobs:
           python-version: 3.11
       - name: Install dependencies
         run: |
-          python -m pip install .
+          python -m pip install mkdocs
       - name: Publish to GitHub Pages
         if: success()
         run: |
