--- a/.github/workflows/deploy-release.yml
+++ b/.github/workflows/deploy-release.yml
@@ -18,6 +18,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install mkdocs
+          python -m pip install pymdownx
       - name: Publish to GitHub Pages
         if: success()
         run: |
